# printer-maintenance-manager

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: ADMIN_GUIDE.md  API_REFERENCE.md  CONTRIBUTING.md  MAINTENANCE_PRESETS.md  USER_GUIDE.md
docs/components/: printer_maintenance_manager.md
printer_maintenance_manager/: __init__.py  alerts.py  config.py  config.yaml  database.py  exporters.py  maintenance.py  plugin.py  telegram.py  usage.py
printer_maintenance_manager.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: install.sh  migrate_db.sh  uninstall.sh
tests/: test_printer_maintenance_manager.py
ui/mainsail/: MaintenancePanel.vue  MaintenanceWidget.vue  index.js
